--- a/mainweb.html
+++ b/mainweb.html
@@ -83,7 +83,7 @@
             <ul>
                 <li><a href="mainweb.html" target="_blank">Home</a></li>
                 <li><a href="About_us.html" target="_blank">About Us</a></li>
-                <li><a href="My_account.html" target="_blank">How it Started</a></li>
+                <li><a href="How_It_Started.html" target="_blank">How it Started</a></li>
             </ul>
             <div class="input">
                 <input type="text" name="" id="" placeholder="Search Here">
@@ -114,7 +114,7 @@
                 
                 <div class="thread">
                     <div class="box1">
-                    <h3>"Looking for a New Adventure: Game Recommendations?"re</h3>
+                    <h3>"Looking for a New Adventure: Game Recommendations?</h3>
                     
                     <img src="witcher3.jpg" alt="" width="200px" >
                     <br>
